fixing layout bugs

--- a/css/media.css
+++ b/css/media.css
@@ -680,7 +680,7 @@
 		width: 105px;
 	}
 	.hero {
-		background-size: 140%;
+		background-size: 130%;
 		background-position-y: -30vw;
 	}
 	.hero__btn-container,
@@ -705,6 +705,10 @@
 	}
 	.hero__btn-img {
 		width: 210px;
+	}
+	.featured-news__splide {
+		margin-top: 60px;
+		transform: translateY(0);
 	}
 	.featured-news__heading {
 		justify-self: flex-end;
@@ -758,12 +762,16 @@
 		height: 66px;
 	}
 	.game-features {
+		height: 640px;
 		padding-top: 0;
 		background-image: none;
 	}
 	.game-features__content {
 		height: 550px;
 		transform: translate(12px, 20px);
+	}
+	.game-features__heading {
+		margin-bottom: 40px;
 	}
 	.game-features__track {
 		margin-top: 5%;
@@ -782,7 +790,7 @@
 	.game-features__navigation {
 		padding-right: 0;
 		padding-left: 0;
-		transform: translate(-11px, -120px);
+		transform: translate(-11px, -170px);
 	}
 	.game-features__pagination > li:not(:last-child) {
 		margin-right: 10px;
@@ -904,7 +912,7 @@
 	.featured-news__splide {
 		height: 450px;
 		margin-top: 150px;
-		margin-bottom: 30px;
+		margin-bottom: 50px;
 		transform: translate(8px, 0);
 	}
 	.featured-news__track {
@@ -941,7 +949,7 @@
 		height: 56px;
 	}
 	.game-features {
-		height: 400px;
+		height: 430px;
 		margin-bottom: 30px;
 		scroll-behavior: smooth;
 	}
@@ -1059,27 +1067,8 @@
 	}
 }
 @media screen and (max-width: 400px) {
-	.featured-news__heading {
-		margin-bottom: 0;
-	}
-	.featured-news__splide {
-		transform: translate(8px, 115px);
-	}
-	.promo__playbtn {
-		top: 44%;
-		left: 50%;
-	}
 	.section-heading {
 		font-size: 23px;
-	}
-	.game-features__navigation {
-		transform: translateY(-63vw);
-	}
-}
-@media screen and (max-width: 350px) {
-	.hero {
-		background-size: 150%;
-		background-position: -23vw -44vw;
 	}
 	.hero__btn,
 	.hero__btn-img,
@@ -1088,9 +1077,21 @@
 		width: 190px;
 		height: 57px;
 	}
+	.hero {
+		background-size: 150%;
+		background-position: -23vw -44vw;
+	}
+	.featured-news__heading {
+		margin-bottom: 0;
+	}
 	.featured-news__splide {
 		height: 440px;
-		transform: translate(4px, 70px);
+		margin-top: 120px;
+		margin-bottom: 50px;
+		transform: translate(10px, 0);
+	}
+	.game-features__navigation {
+		transform: translateY(-63vw);
 	}
 	.featured-news__navigation {
 		transform: none;
@@ -1099,8 +1100,11 @@
 	.game-features {
 		height: 320px;
 	}
+	.promo {
+		height: 300px;
+	}
 	.promo__playbtn {
-		top: 39%;
+		top: 45%;
 		width: 46px;
 		height: 46px;
 	}
@@ -1113,7 +1117,7 @@
 		height: 270px;
 	}
 	.game-features__content {
-		transform: translate(0, -25px);
+		transform: translate(7px, 60px);
 	}
 	.game-features__list {
 		transform: translateX(0%);
@@ -1123,22 +1127,25 @@
 		padding: 15px;
 	}
 	.game-features__navigation {
-		margin-top: 10px;
-		transform: none;
+		transform: translateY(-50px);
 	}
 	.game-features__pagination {
 		margin-left: 20px;
 		margin-right: 20px;
 	}
 	.cta__heading {
-		font-size: 22px;
+		margin-top: 70px;
 		margin-bottom: 20px;
+		font-size: 22px;
 	}
 	.footer-links {
 		flex-wrap: wrap;
 	}
 	.footer-links__item {
 		margin-bottom: 20px;
+	}
+	.footer-links__item:not(:last-child) {
+		margin-right: 30px;
 	}
 	.footer-links__item:nth-child(4),
 	.footer-links__item:last-child {
